feat: 补充分布式事务、分布式ID、API网关、服务治理、链路追踪、服务注册发现文档
- 分布式事务：CAP/BASE理论、2PC/3PC/TCC/事务消息/Seata
- 分布式ID：UUID/号段/雪花算法/Leaf
- API网关：Spring Cloud Gateway/Kong/认证鉴权/限流熔断
- 服务治理：熔断降级/限流/Sentinel/Resilience4j
- 链路追踪：SkyWalking/Zipkin/OpenTelemetry
- 服务注册发现：Nacos/Eureka/Consul/负载均衡